<resources>
    <string name="app_name">BeerBy</string>

    <string name="action_home">Home</string>
    <string name="back_b">Back home!</string>

    <string name="action_exit">Exit</string>
    <string name="exit_b">Exit App!</string>

    <string name="beerImage">beer</string>
    <string name="beer_info">Find the best beer places here! Search by: </string>

    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipCode">Zip Code</string>

    <string name="editText_main">Enter your text here...</string>
    <string name="searchBn">Let\'s go!</string>

    <string name="listInfo">Click the brewery name to find more information about it...</string>

    <string name="brewery_name">Brewery name:</string>
    <string name="brewery_loc">Location:</string>

    <string name="search_map">Map</string>
    <string name="open_map">Open Map</string>
    <string name="beer_log">beerLog</string>

    <string name="brewery_map">Click the icon map to get directions!</string>

    <string name="brewery_type">Type:</string>
    <string name="brewery_address">Address:</string>
    <string name="brewery_city">City:</string>
    <string name="brewery_state">State:</string>

    <string name="brewery_zipCode">Zip Code:</string>

    <string name="brewery_country">Country:</string>
    <string name="brewery_phone">Phone Number:</string>
    <string name="brewery_website">Website:</string>
    <string name="come_back_to_the_list">Come back to the list!</string>

    <string name="home_icon">Going home</string>
    <string name="exit_icon">Leaving the app</string>

    <string name="cityB">Find by city</string>
    <string name="stateB">Find by State</string>
    <string name="zipCodeB">Find by Zip Code</string>

    <string name="url">Website: </string>
    <string name="type">Type:</string>
    <string name="address">"Address: "</string>
    <string name="cityToShow">"City: "</string>
    <string name="stateToShow">"State: "</string>
    <string name="zipCodeToShow">"Zip Code: "</string>
    <string name="countryToShow">"Country: "</string>
    <string name="phoneToShow">"Phone: "</string>


</resources>