<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BreweryDetailsCard">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#4CAF50"
        app:layout_anchor="@+id/appBarLayout"
        app:layout_anchorGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.BeerBy">

    </androidx.appcompat.widget.Toolbar>


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="#FFEB3B"
        android:theme="@style/Theme.BeerBy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="531dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/breweryWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/brewery_website"
                android:textColor="#080C06"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/breweryType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/brewery_type"
                android:textColor="#080C06"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/breweryAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/brewery_address"
                android:textColor="#080C06"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/breweryCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/brewery_city"
                android:textColor="#080C06"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/breweryState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/brewery_state"
                android:textColor="#080C06"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/breweryZipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/brewery_zipCode"
                android:textColor="#080C06"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/breweryCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/brewery_country"
                android:textColor="#080C06"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/breweryPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/brewery_phone"
                android:textColor="#080C06"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="378dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/come_back_to_the_list"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="comeBackToTheList"
            android:backgroundTint="#F44336"/>


    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>