<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutConst"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:showIn="@layout/activity_main">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/beerImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/findBeerPlaces"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/beer1" />

    <TextView
        android:id="@+id/findBeerPlaces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/beer_info"
        android:textAlignment="center"
        android:textColor="#152011"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <RadioGroup

        android:id="@+id/radio_group"
        android:layout_width="195dp"
        android:layout_height="180dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findBeerPlaces">

        <RadioButton
            android:id="@+id/city"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="@string/city"
            android:textColor="#004D40"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/findBeerPlaces" />

        <RadioButton
            android:id="@+id/state"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/state"
            android:textColor="#004D40"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/city"
            app:layout_constraintTop_toBottomOf="@+id/findBeerPlaces" />

        <RadioButton
            android:id="@+id/zipCode"
            android:layout_marginStart="32dp"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/zipCode"
            android:textColor="#004D40"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.753"
            app:layout_constraintStart_toEndOf="@+id/state"
            app:layout_constraintTop_toBottomOf="@+id/findBeerPlaces" />

    </RadioGroup>

    <EditText
        android:id="@+id/searchB"
        android:layout_width="194dp"
        android:layout_height="63dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:backgroundTint="#F44336"
        android:hint="@string/editText_main"
        android:inputType="textLongMessage"
        android:minHeight="48dp"
        android:textColorHint="#23391A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#F44336"
        android:onClick="showAListOfResults"
        android:text="@string/searchBn"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchB" />


</androidx.constraintlayout.widget.ConstraintLayout>