<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#4CAF50"
        app:layout_anchor="@+id/appBarLayout"
        app:layout_anchorGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.Beer_by">

    </androidx.appcompat.widget.Toolbar>


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="#FFEB3B"
        android:theme="@style/Theme.Beer_by"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <androidx.cardview.widget.CardView
            android:id="@+id/breweryCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="#FFC107" >

            <RelativeLayout
                android:id="@+id/showingCardInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/beerLog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/beer_log"
                    app:srcCompat="@drawable/beer2" />

                <TextView
                    android:id="@+id/breweryName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/beerLog"
                    android:onClick="breweryDetailedInfo"
                    android:padding="15dp"
                    android:text="@string/brewery_name"
                    android:textColor="#130C0A"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/breweryLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/breweryName"
                    android:padding="15dp"
                    android:text="@string/brewery_loc"
                    android:textColor="#120C0B"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/breweryMap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/breweryLocation"
                    android:padding="15dp"
                    android:text="@string/brewery_map"
                    android:textColor="#6D4C41"
                    android:textSize="14sp"
                    android:textStyle="bold" />


                <ImageView
                    android:id="@+id/map"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/breweryMap"
                    android:background="#96004E"
                    android:contentDescription="@string/open_map"
                    android:minHeight="48dp"
                    android:onClick="openLocationInMap"
                    app:srcCompat="@drawable/ic_map" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </com.google.android.material.appbar.AppBarLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

